BUGFIX Fixed spacing at the top of right forms in the CMS caused by the <legend> element. Fixed by hiding it via CSS instead of removing it completely
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/branches/2.3@70135 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -17,6 +17,11 @@
 	position: relative;
 }
 
+/* legend tag shows up annoying spacing in IE6/7 */
+.right form legend {
+	display: none;
+}
+
 .right form .field {
 	/*margin: 3px !important;*/
 	margin: 0;
